--- a/animations/button_hover/styles.css
+++ b/animations/button_hover/styles.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  --body-bg: rgb(222, 141, 247);
+  --body-bg: rgb(2, 56, 127);
   --button-border: rgba(218, 218, 218, 0.752);
   --button-highlight: white;
   --button-text: white;
@@ -36,12 +36,13 @@ button {
   color: var(--button-text);
   width: var(--button-width);
   height: var(--button-height);
+  cursor: pointer;
 }
 
 .glitter {
   background: transparent;
   border: unset;
-  transition: background 2s;
+  transition: all 1s ease-in-out;
 
   position: relative;
 }
@@ -61,9 +62,9 @@ button {
 
 .highlight-line {
   stroke: var(--button-highlight);
-  stroke-dasharray: 50 430;
-  stroke-dashoffset: 186;
-  opacity: 0;
+  stroke-dasharray: 50 480;
+  stroke-dashoffset: 50;
+  transition: all 1s ease-in-out;
 }
 
 .glitter:hover {
@@ -71,28 +72,5 @@ button {
 }
 
 .glitter:hover .highlight-line {
-  animation: shine 2s;
-}
-
-@keyframes shine {
-  0% {
-    opacity: 0;
-    stroke-dasharray: 50 430;
-    stroke-dashoffset: 186;
-  }
-
-  1% {
-    opacity: 1;
-  }
-
-  70% {
-    stroke-dasharray: 50 430;
-    stroke-dashoffset: -244;
-  }
-
-  100% {
-    opacity: 1;
-    stroke-dasharray: 0 430;
-    stroke-dashoffset: -294;
-  }
+  stroke-dashoffset: -480;
 }
