--- a/animations/card_carousel/styles.css
+++ b/animations/card_carousel/styles.css
@@ -2,6 +2,8 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  --card-width: 200px;
+  --card-height: 280px;
 }
 
 html,
@@ -19,12 +21,17 @@ body {
 }
 
 .carousel {
+  width: 100%;
   display: flex;
+  position: relative;
 }
 
 .carousel .card {
-  width: 200px;
-  height: 280px;
+  position: absolute;
+  left: calc(50% - var(--card-width)/2);
+
+  width: var(--card-width);
+  height: var(--card-height);
   border-radius: 10px;
   border: 1px solid grey;
 
