--- a/animations/card_carousel/styles.css
+++ b/animations/card_carousel/styles.css
@@ -28,12 +28,14 @@ body {
 
 .carousel .card {
   position: absolute;
-  left: calc(50% - var(--card-width)/2);
+  left: calc(50% - var(--card-width) / 2);
 
   width: var(--card-width);
   height: var(--card-height);
+  background-color: lightblue;
   border-radius: 10px;
   border: 1px solid grey;
+  transition: transform 300ms;
 
   display: flex;
   flex-direction: column;
@@ -45,4 +47,9 @@ body {
   padding: 10px 15px;
   border-radius: 50%;
   background-color: lightgray;
+}
+
+.controls {
+  position: absolute;
+  bottom: 50px;
 }
